@@ -410,8 +410,11 @@ const float JET_ETA_CUT      = 2.5;  // Cut in SusyNtMaker is 4.9 Maybe change?
                                      // --> No, 2.5 is SIGNAL JET eta!!
 const float JET_JVF_CUT      = 0.5; 
  
-const float JET_JVF_CUT_2L   = 0.2;  
+//const float JET_JVF_CUT_2L   = 0.2;  
+const float JET_JVF_CUT_2L   = 0.0;  
+const float JET_JVF_PT       = 50;  
 const float JET_PT_L25_CUT   = 25;
+const float JET_PT_L20_CUT   = 20;
 const float JET_PT_B20_CUT   = 20;
 const float JET_PT_F30_CUT   = 30;
 const float JET_ETA_MAX_CUT  = 4.5;  
