@@ -2,6 +2,7 @@
 2013-02-09 Matt
 	* Updated DilTrigLogic to accomodate new mu-Met trigger
 	* Updated Susy2LepCutflow so it would compile -- TODO: Tidy up 2Lep cutflow so that it can be used.
+	* Updated SusyNtTools with latest jet definitions following Anyes Summary email
 	
 2013-02-09 Steve
 	* Added detEta (detector eta) to jet class, which might be needed later for jvf cut
